--- a/about.html
+++ b/about.html
@@ -182,9 +182,7 @@
                             Info
                         </h4>
                         <p>
-                            necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
-                        </p>
-                    </div>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam nobis ullam consequatur unde maxime suscipit libero reiciendis, voluptatum beatae, voluptas dicta numquam repellat et obcaecati aspernatur velit qui voluptatibus quos. </div>
                 </div>
                 <div class="col-md-6 col-lg-2 mx-auto info_col">
                     <div class="info_link_box">
