--- a/index.html
+++ b/index.html
@@ -635,8 +635,7 @@
                             Info
                         </h4>
                         <p>
-                            necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
-                        </p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat quaerat repellat excepturi aliquam sequi, perspiciatis rerum minus debitis exercitationem? Tempore id officia maiores, voluptates optio amet itaque veniam praesentium quam! </p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-2 mx-auto info_col">
