--- a/team.html
+++ b/team.html
@@ -257,8 +257,7 @@
                             Info
                         </h4>
                         <p>
-                            necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
-                        </p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores tenetur quisquam labore voluptatum enim saepe odio repudiandae aliquid aperiam voluptate delectus, esse, autem aliquam, hic atque error repellat quam totam! </p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-2 mx-auto info_col">
