--- a/service.html
+++ b/service.html
@@ -225,8 +225,7 @@
                             Info
                         </h4>
                         <p>
-                            necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
-                        </p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime commodi ut quaerat fuga ullam repellendus, facilis ex qui eveniet, similique reiciendis, necessitatibus earum nisi iure dolorum porro iusto praesentium. Accusantium! </p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-2 mx-auto info_col">
