--- a/index.html
+++ b/index.html
@@ -94,14 +94,17 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="gif-container">
-                            <!-- Place your GIF here -->
-                            <img src="images/FrontwAVE.svg" alt="Showcase GIF" class="img-fluid">
+                            <!-- YouTube Video Embed with Autoplay and Mute -->
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/LWD7lIfhHcg?autoplay=1&mute=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
+
         <!-- end GIF showcase section -->
+
 
         <!-- slider section -->
         <section class="slider_section ">
